--- a/browser-plugins/chrome/tutorial/popup.html
+++ b/browser-plugins/chrome/tutorial/popup.html
@@ -7,17 +7,45 @@
 <html>
   <head>
     <title>Getting Started Extension's Popup</title>
+    <script src="jquery.min.js"></script>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 100%;
+        min-width: 500px;
       }
-      #status {
-        /* avoid an excessively wide status text */
-        white-space: pre;
-        text-overflow: ellipsis;
+      h2 {
+        margin-bottom: 5px; 
+        padding-bottom: 0;
+      }
+      p {
+        margin:0;
+        padding: 0;
+        font-size: 14px;
+      }
+      .left {
+        float: left;
+        width: auto;
+        margin-right: 10px;
+      }
+      .right {
+        float: right;
+      }
+      .clear {
+        clear: both;
+      }
+      .timeAgo {
+        font-size: 11px;
+        color: grey;
+      }
+      .comment {
+        width: 90%;
+        padding: 10px 10px 10px 0;
         overflow: hidden;
-        max-width: 400px;
+      }
+      .comment img {
+        margin-right: 15px;
+        float: left;
       }
     </style>
 
@@ -30,8 +58,29 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
+    <div id="wrapper">
+      <h2 style="">Comments</h2>
+      <i style="font-size: 13px;"><span id="url"></span></i>
+      <div>
+        <div class="comment">
+            <img src="avatar_default.png" />
+            <div><b>vonsuu</b><span class="timeAgo"> 4 hours ago</span><span style="float: right;">+ -</span></div>
+            <p>Moj pierwszy komentarz</p>
+        </div>
+      </div>
+      <div id="comments">
+        <div id="comments_flag"></div>
+      </div>
+      <hr/>
+      <div id="new_comment_form">
+        <h2>Add new comment</h2>
+        <form id="comment_form">
+          <textarea id="comment_content" name="comment_content" rows="5" cols="60"></textarea>
+          <input id="comment_submit" type="submit" value="Submit">
+        </form>
+                  
+      </div>
+    </div>
   </body>
 </html>
 
