Before iframe changes

--- a/browser-plugins/chrome/tutorial/popup.html
+++ b/browser-plugins/chrome/tutorial/popup.html
@@ -58,6 +58,7 @@
     <script src="popup.js"></script>
   </head>
   <body>
+  <iframe src="http://www.w3schools.com"></iframe>
     <div id="wrapper">
       <h2 style="">Comments</h2>
       <i style="font-size: 13px;"><span id="url"></span></i>
